--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fas fa-heart heart5"></i>
             </div>
             <h1 class="main-title">Marie</h1>
-            <h2 class="subtitle">蔡含瑩</h2>
+            <h2 class="subtitle">漂亮妹妹 - 蔡函瑩</h2>
             <p class="hero-message">願你早日康復，重拾健康與笑容 💖</p>
             <div class="hero-icon">
                 <i class="fas fa-heart pulse-heart"></i>
